tests/ui/target_modifiers/target_cpu_specified_twice.error_generated.stderr
error: mixing `-Ctarget-cpu` will cause an ABI mismatch in crate `target_cpu_specified_twice`
  --> $DIR/target_cpu_specified_twice.rs:14:1
   |
LL | #![feature(no_core)]
   | ^
   |
   = help: the `-Ctarget-cpu` flag modifies the ABI so Rust crates compiled with different values of this flag cannot be used together safely
   = note: `-Ctarget-cpu=sm_70` in this crate is incompatible with `-Ctarget-cpu=sm_60` in dependency `target_cpu_is_target_modifier`
   = help: set `-Ctarget-cpu=sm_60` in this crate or `-Ctarget-cpu=sm_70` in `target_cpu_is_target_modifier`
   = help: if you are sure this will not cause problems, you may use `-Cunsafe-allow-abi-mismatch=target-cpu` to silence this error

error: aborting due to 1 previous error

